--- a/Matricks/appsettings.json
+++ b/Matricks/appsettings.json
@@ -1,6 +1,9 @@
 ﻿{
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Matricks-DB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  //},
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Matricks-DB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MvcMovie_TarquinioContext-6605a43b-cace-4b09-a326-459b015a9cfb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
